129. Signing up Users npm i jsonwebtoken make toke for user when he signup and in the config file jwt secret that it must over than 32 char and unique for each project add <JWT_EXPIRES_IN> that is make the token valid for the time you specify (90d) see manual (https://github.com/auth0/node-jsonwebtoken) to encrept header and payload (https://jwt.io/)

--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://mohamed:<PASSWORD>@cluster0.xafqqcp.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=aELNiCa-95rVjFz
+
+JWT_SECRET=just-learn-how-to-secure-login-using-jwt
+JWT_EXPIRES_IN=90d
