136. Sending Emails with Nodemailer npm i nodemailer

--- a/config.env
+++ b/config.env
@@ -5,3 +5,8 @@ DATABASE_PASSWORD=aELNiCa-95rVjFz
 
 JWT_SECRET=just-learn-how-to-secure-login-using-jwt
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=276a6e5614943d
+EMAIL_PASSWORD=8baa2c5cf553f2
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=587
